[tool.poetry]
name = "project3-kovalishin-timofey-m25-555"
version = "0.1.0"
description = "My final project."
authors = ["Timofey Kovalishin"]
readme = "README.md"

packages = [{ include = "valutatrade_hub" }]


[tool.poetry.scripts]
project = "valutatrade_hub.main:main"


[tool.poetry.dependencies]
python = ">=3.13"
prettytable = "^3.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)"
]
